--- a/code_new/views/landing.ejs
+++ b/code_new/views/landing.ejs
@@ -3,15 +3,26 @@
  <div class="container">
      <header class="jumbotron vertical-center">
          <div class="container">
-             <h1>Welcome to CallaCare!</h1>
-             <p>We help you connect better!</p>
+             <h1>Comparitive Sentiment Analysis</h1>
+             <h3>News Coverage vs Public Opinion</h3>
+             <p></p>
              <p>
-                <a class="btn btn-primary btn-large active" href="/nurses">View all nurses</a>
-                <a class="btn btn-primary btn-large active" href="/patients">View all patients</a>
+                <a class="btn btn-primary btn-large active" href="/graph">Topic Modelling</a>
+                <a class="btn btn-primary btn-large active" href="/line">Line Graph</a>
+                <a class="btn btn-primary btn-large active" href="/slide">Slides</a>
                 
              </p>
+             
          </div>
+        
      </header>
+     <!--<div class="container" align="center">-->
+     <!-- <img src="AimDV.PNG" width="1020" height="800"/>-->
+     <!-- </div>-->
+     
+     <div class="container" align="center">
+     <iframe src="https://docs.google.com/document/d/e/2PACX-1vS6_aV3RCvEcc5qTziVNWak4RH5jmEZBoWGjBO_Rr2UqPBXvWQna7y8tf10smEbera42-P9NYvyfen5/pub?embedded=true" frameborder="0" width="1024" height="607"></iframe>
+     </div>
  </div>
 
 <% include partials/footer %>
